# Gitabic

./: .gitignore  CMakeLists peer.txt  LICENSE  LibNice.c  Makefile  README.md  cmakeServer.txt  gitabic  simple-example
ClionPeer/: CMakeLists.txt  main.cpp
ClionPeer/Encryptions/SHA256/: sha256.cpp
ClionPeer/ICEConnection/: ICEConnection.cpp  ICEConnection.h
ClionPeer/NetworkUnit/ServerComm/TCPSocket/: TCPSocket.cpp  TCPSocket.h
ClionPeer/NetworkUnit/SocketHandler/: SocketHandler.h
ClionPeer/Utils/: ThreadSafeCout.cpp  ThreadSafeCout.h
ClionServer/: CMakeLists.txt  main.cpp
ClionServer/Communication/: MultiThreadedServer.h
ClionServer/Communication/IceMessagesHandler/: IceMessagesHandler.h
ClionServer/Communication/MessageHandler/: MessageHandler.cpp  MessageHandler.h
ClionServer/Communication/MultiThreadedServer/: MultiThreadedServer.h
ClionServer/Communication/TrackerMessageHandling/: TrackerMessageHandling.cpp  TrackerMessageHandling.h
ClionServer/Encryptions/AES/: AESHandler.cpp  AESHandler.h
ClionServer/Encryptions/SHA256/: sha256.cpp
ClionServer/NetworkUnit/: Messages.h
ClionServer/Utils/: SerializeDeserializeUtils.cpp
ClionServer/Utils/FileUtils/: FileUtils.cpp  FileUtils.h
ClionServer/Utils/SerializeDeserializeUtils/: SerializeDeserializeUtils.h
ClionServer/Utils/ThreadSafeCout/: ThreadSafeCout.cpp  ThreadSafeCout.h
ClionServer/Utils/VectorUint8Utils/: VectorUint8Utils.cpp  VectorUint8Utils.h
Dockers/: DockerHelp.txt  DockerHelp.txt.gitabic  Dockerfile  Peer  README.md  docker-desktop-amd64.deb.gitabic  dockerAutomation.py  dockerAutomationVisual.py  image.png.gitabic  simple-example  test.txt.gitabic  test19Kb.txt.gitabic  testVideo.mp4.gitabic
Lib/: CMakeLists.txt
Lib/Encryptions/SHA256/: sha256.h
Lib/Utils/: Address.h  VectorUint8Utils.cpp
Lib/Utils/MetaDataFile/: MetaDataFile.h
Peer/: CMakeLists.txt  Makefile  README.md  connTest.py  moveExec.sh  test.gitabic
Peer/Encryptions/SHA256/: sha256.cpp
Peer/ICEConnection/: ICEConnection.cpp  ICEConnection.h
Peer/NetworkUnit/ServerComm/: Messages.h
Peer/NetworkUnit/SocketHandler/: SocketHandler.cpp  SocketHandler.h
Peer/Torrent/FileIO/: FileIO.h
Peer/Torrent/PeersConnectionManager/: PeersConnectionManager.h
Peer/Torrent/PieceManagement/: RarityTrackerChooser.cpp
Peer/Torrent/TorrentFileHandler/: TorrentFileHandler.cpp  TorrentFileHandler.h
Peer/Utils/: SerializeDeserializeUtils.h  ThreadSafeCout.h
Peer/Utils/DowndloadProgress/: DownloadProgress.cpp
Peer/Utils/FileHandler/: FileHandler.cpp  FileHandler.h
Peer/Utils/FileUtils/: FileUtils.cpp
Peer/src/: main.cpp  progress.prog
Peer/src/ICEConnection/: ICEConnection.cpp  ICEConnection.h
Peer/src/Utils/: SerializeDeserializeUtils.cpp  SerializeDeserializeUtils.h  VectorUint8Utils.h
Peer/src/c/: simple-example.c
Peer/src/cpp/: main.cpp
Peer2/: Makefile
Peer2/src/: main.cpp
PeerLion/: CMakeLists.txt  README.md  SimpleExampleWorks.txt  main.cpp  peerLionWontWorkLibNiceLog.txt
PeerLion/Encryptions/AES/: AESHandler.cpp  AESHandler.h
PeerLion/Encryptions/SHA256/: sha256.cpp  sha256.h
PeerLion/ICEConnection/: ICEConnection.cpp  ICEConnection.h
PeerLion/NetworkUnit/PseudoTCP/: TCPConnection.h
PeerLion/NetworkUnit/ServerComm/: BitTorrentMessages.cpp  BitTorrentMessages.h  Messages.h
PeerLion/NetworkUnit/ServerComm/DataRepublish/: DataRepublish.cpp  DataRepublish.h
PeerLion/NetworkUnit/ServerComm/TCPSocket/: TCPSocket.cpp
PeerLion/NetworkUnit/SocketHandler/: SocketHandler.h
PeerLion/Torrent/ConnectionManager/: ConnectionManager.cpp  ConnectionManager.h
PeerLion/Torrent/FileHandler/: TorrentFileHandler.cpp  TorrentFileHandler.h
PeerLion/Torrent/FileIO/: FileIO.cpp  FileIO.h
PeerLion/Torrent/PeerManager/: PeerManager.cpp  PeerManager.h
PeerLion/Torrent/PeersConnectionManager/: PeersConnectionManager.cpp  PeersConnectionManager.h
PeerLion/Torrent/PieceManagement/: IPieceChooser.h  RarityTrackerChooser.cpp  RarityTrackerChooser.h
PeerLion/Torrent/PieceManager/: IPieceChooser.h  RarityTrackerChooser.cpp  RarityTrackerChooser.h
PeerLion/Torrent/TorrentFileHandler/: HandleRequests.cpp  HandleRequests.h  TorrentFileHandler.cpp  TorrentFileHandler.h
PeerLion/Torrent/TorrentManager/: TorrentManager.cpp  TorrentManager.h
PeerLion/Utils/: SerializeDeserializeUtils.cpp  SerializeDeserializeUtils.h  ThreadSafeCout.cpp  TorrentCLI.hpp
PeerLion/Utils/DowndloadProgress/: DownloadProgress.cpp  DownloadProgress.h
PeerLion/Utils/FileHandler/: FileHandler.cpp  FileHandler.h
PeerLion/Utils/FileUtils/: FileUtils.cpp  FileUtils.h
PeerLion/Utils/MetaDataFile/: MetaDataFile.cpp  MetaDataFile.h
Server/: CMakeLists.txt  Makefile  README.md  connTestServer.py
Server/Communication/: IceMessagesHandler.h
Server/src/: main.cpp
Server/src/Communication/: IceMessagesHandler.cpp  IceMessagesHandler.h  MessageHandler.cpp  MessageHandler.h  MultiThreadedServer.cpp  MultiThreadedServer.h  TrackerMessageHandling.cpp  TrackerMessageHandling.h
Server/src/Server/: MultithreadedServer.h
Server/src/Utils/: SerializeDeserializeUtils.cpp  SerializeDeserializeUtils.h  SerializerDeserializerUtils.cpp  SerializerDeserializerUtils.h
ServerLion/: CMakeLists.txt  ServerLion  main.cpp
ServerLion/Communication/: IceMessagesHandler.cpp  IceMessagesHandler.h  MessageHandler.cpp  MultiThreadedServer.cpp  MultiThreadedServer.h  TrackerMessageHandling.cpp  TrackerMessageHandling.h
ServerLion/Encryptions/SHA256/: sha256.h
ServerLion/NetworkUnit/ServerCom/: Messages.h
ServerLion/NetworkUnit/ServerCom/TCPClientSocket/: TCPClientSocket.cpp
ServerLion/NetworkUnit/ServerCom/TrackerDataStorage/: TrackerDataStorage.cpp
ServerLion/Utils/: FileUtils.cpp  FileUtils.h  SerializeDeserializeUtils.h  Typedefs.h
src/: main.cpp
src/NetworkUnit/Connection/: Connection.cpp  Connection.h
src/NetworkUnit/PseudoTCP/: TCPConnection.cpp
src/NetworkUnit/ServerComm/: Messages.h
src/NetworkUnit/SocketHandler/: SocketHandler.cpp  (+1 more)
src/SHA256/: sha256.cpp  sha256.h
src/Utils/: FileUtils.cpp  FileUtils.h
(+42 files in other folders)
